...
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
...
            app:hintTextColor="#000000"
            app:passwordToggleTint="#00FFFFFF"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
...
                android:layout_marginTop="-35dp"
                android:entries="@array/room_list"
                android:hint="Room Type" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_date_range_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/adult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#FF9800"
            app:startIconDrawable="@drawable/ic_baseline_emoji_people_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_adult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number of Adult"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="#00FFFFFF"
            app:boxStrokeColor="#000000"
            app:endIconTint="#000000"
            app:hintTextColor="#000000"
            app:startIconDrawable="@drawable/ic_baseline_child_care_24"
            app:startIconTint="#FF9800">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Number of Child"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_book"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Booking"
            app:backgroundTint="#000000" />

    </LinearLayout>
</ScrollView>

